--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="application/javascript">
   </script>
   <body>
-    <main id="main"></main>
     <script type="text/javascript" src="index.js"></script>
   </body>
+  <h1 id="victory">Kiptoo is the champion</h1>
 </html>
